新增忽略.sln文件

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@
 Debug.win32
 proj.win32/DonTouchWhile.v11.suo
 proj.win32/DonTouchWhile.sdf
+proj.win32/DonTouchWhile.sln
 DonTouchWhile.opensdf
 *.sdf
