--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ Debug.win32
 proj.win32/DonTouchWhile.v11.suo
 proj.win32/DonTouchWhile.sdf
 proj.win32/DonTouchWhile.sln
+proj.win32/DonTouchWhile.vcxproj
 DonTouchWhile.opensdf
 *.sdf
