--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-﻿
-*.ios
-*.linux
-*.mac
-*.marmalade
-*.winrt
-*.wp8
-*.android
-*.blackberry
+﻿.git
 Debug.win32
-proj.win32/DonTouchWhile.v11.suo
-proj.win32/DonTouchWhile.sdf
-proj.win32/DonTouchWhile.sln
-proj.win32/DonTouchWhile.vcxproj
-DonTouchWhile.opensdf
+proj.*
 *.sdf
